Changelog for Miosix np embedded OS

- Updated backend_benchmark.cpp to use DevFs instead of the old Disk interface.
- Fixed a bug in the stm32 SDIO drivers that caused the slowest clock speed
  selection, resulting in a serious performance regression when writing to
  an SD card. Bug was added in commit e697ded4325a5a2de12706712abc4a846d733b3e
- Added streamwriter example to show how to write to an SD card at a relatively
  high data rate.
- Added dirlist testcase
- Relaxed file open mode checks in DevFs to allow opening device files with
  fopen()
- Added loop mount example.
- Fixed a bug in umount().
- Reworked logging.h to decrease code size.
- Moving from mallinfo() to _mallinfo_r() in getCurrentFreeHeap() to avoid
  accidentally bringing in iprintf(), which increases code size.
- Added RCC_SYNC() macro to all stm32 BSPs to workaround an errata in the
  stm32f42x requiring additional cycles to enable clock gating. From now on
  it is suggested to add an RCC_SYNC() after every access to the RCC to
  enable clock gating an all stm32 ports.
- Added SDRAM initialization code for stm32f429 board, and SDRAM linker
  scripts. The new default is to put .data/.bss/stack and heap in the SDRAM,
  and to leave the upper 2MB of it for the LCD.
- Cleaned up code completion configuration for Netbeans. Now the IDE
  automatically detects the source files that belong to the project by looking 
  at the debug symbols in the produced elf file. 
- Added memory barrier to saveContext() to prevent a race condition found in
  the new stm32f429 board.
- Now Makefile.inc has no predefined board. This has been done in order to
  avoid mistakenly compiling for the wrong board.
- Fixed bug in testsuite: it failed compiling with exceptions disabled due
  to RTTI dependence.
- Fixed a bug in Thread::create() causing a crash when the heap is full.
- Changed PROGRAM_CMDLINE for stm32vldiscovery from vsprog to stm32flash