@@ -1,14 +1,17 @@
 ##
-## Makefile for Miosix np embedded OS
-## TFT:Terraneo Federico Technlogies
+## Makefile for Miosix embedded OS
 ##
-MAKEFILE_VERSION := 1.02
-include miosix/config/Makefile.inc
+MAKEFILE_VERSION := 1.03
+## Path to kernel directory
+KPATH := miosix
+## Path to config directory
+CONFPATH := $(realpath $(KPATH))
+include $(CONFPATH)/config/Makefile.inc
 
 ##
 ## List here subdirectories which contains makefiles
 ##
-SUBDIRS := miosix
+SUBDIRS := $(KPATH)
 
 ##
 ## List here your source files (both .s, .c and .cpp)
@@ -34,16 +37,19 @@ INCLUDE_DIRS :=
 OBJ := $(addsuffix .o, $(basename $(SRC)))
 
 ## Includes the miosix base directory for C/C++
-CXXFLAGS  := $(CXXFLAGS_BASE) -I. -Imiosix -Imiosix/arch/common \
-             -Imiosix/$(ARCH_INC) -Imiosix/$(BOARD_INC) $(INCLUDE_DIRS)
-CFLAGS    := $(CFLAGS_BASE)   -I. -Imiosix -Imiosix/arch/common \
-             -Imiosix/$(ARCH_INC) -Imiosix/$(BOARD_INC) $(INCLUDE_DIRS)
-AFLAGS    := $(AFLAGS_BASE)
-LFLAGS    := $(LFLAGS_BASE)
-DFLAGS    := -MMD -MP
+## Always include CONFPATH first, as it overrides the config file location
+CXXFLAGS := $(CXXFLAGS_BASE) -I$(CONFPATH) -I$(CONFPATH)/config/$(BOARD_INC)  \
+            -I. -I$(KPATH) -I$(KPATH)/arch/common -I$(KPATH)/$(ARCH_INC)      \
+            -I$(KPATH)/$(BOARD_INC) $(INCLUDE_DIRS)
+CFLAGS   := $(CFLAGS_BASE)   -I$(CONFPATH) -I$(CONFPATH)/config/$(BOARD_INC)  \
+            -I. -I$(KPATH) -I$(KPATH)/arch/common -I$(KPATH)/$(ARCH_INC)      \
+            -I$(KPATH)/$(BOARD_INC) $(INCLUDE_DIRS)
+AFLAGS   := $(AFLAGS_BASE)
+LFLAGS   := $(LFLAGS_BASE)
+DFLAGS   := -MMD -MP
 
-LINK_LIBS := $(LIBS) -L./miosix -Wl,--start-group -lmiosix -lstdc++ -lc -lm \
-    -lgcc -Wl,--end-group
+LINK_LIBS := $(LIBS) -L$(KPATH) -Wl,--start-group -lmiosix -lstdc++ -lc \
+             -lm -lgcc -Wl,--end-group
 
 all: all-recursive main
 
@@ -53,10 +59,10 @@ program:
 	$(PROGRAM_CMDLINE)
 
 all-recursive:
-	$(foreach i,$(SUBDIRS),$(MAKE) -C $(i) FOLDER="$(FOLDER) $(i)/" || exit 1;)
+	$(foreach i,$(SUBDIRS),$(MAKE) -C $(i) CONFPATH="$(CONFPATH)" || exit 1;)
 
 clean-recursive:
-	$(foreach i,$(SUBDIRS),$(MAKE) -C $(i) FOLDER="$(FOLDER) $(i)/" clean || exit 1;)
+	$(foreach i,$(SUBDIRS),$(MAKE) -C $(i) CONFPATH="$(CONFPATH)" clean || exit 1;)
 
 clean-topdir:
 	-rm -f $(OBJ) main.elf main.hex main.bin main.map $(OBJ:.o=.d)
@@ -68,7 +74,7 @@ main: main.elf
 
 main.elf: $(OBJ) all-recursive
 	@ echo "linking"
-	$(CXX) $(LFLAGS) -o main.elf $(OBJ) miosix/$(BOOT_FILE) $(LINK_LIBS)
+	$(CXX) $(LFLAGS) -o main.elf $(OBJ) $(KPATH)/$(BOOT_FILE) $(LINK_LIBS)
 
 %.o: %.s
 	$(AS) $(AFLAGS) $< -o $@
